--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "rollup -c -w",
         "start": "sirv public --no-clear",
         "test": "jest",
-        "test-watch": "jest --watchAll"
+        "test-watch": "jest --watchAll",
+        "prepare": "husky install"
     },
     "devDependencies": {
         "@babel/core": "^7.16.0",
@@ -15,6 +16,7 @@
         "@rollup/plugin-commonjs": "^17.0.0",
         "@rollup/plugin-node-resolve": "^11.0.0",
         "babel-jest": "^27.3.1",
+        "husky": "^7.0.4",
         "jest": "^27.3.1",
         "rollup": "^2.3.4",
         "rollup-plugin-css-only": "^3.1.0",
