--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "start": "sirv public --no-clear",
         "test": "jest",
         "test-watch": "jest --watchAll",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "deploy": "node ./gh-pages.js"
     },
     "devDependencies": {
         "@babel/core": "^7.16.0",
@@ -26,6 +27,7 @@
         "svelte": "^3.0.0"
     },
     "dependencies": {
+        "gh-pages": "^3.2.3",
         "sirv-cli": "^1.0.0",
         "sveltestrap": "^5.6.3"
     }
