--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,12 +3,12 @@
     "short_name": "Link Cleaner",
     "icons": [
         {
-            "src": "logo_200x200.png",
+            "src": "./logo_200x200.png",
             "type": "image/png",
             "sizes": "200x200"
         }
     ],
-    "start_url": "/index.html",
+    "start_url": "./index.html",
     "display": "standalone",
     "backgroun_color": "#343a40",
     "theme_color": "#1cebd3"
